try fix scrollbar issue2

--- a/src/iRLeagueManager.Web/wwwroot/css/site.css
+++ b/src/iRLeagueManager.Web/wwwroot/css/site.css
@@ -2,7 +2,7 @@
 @import url(toggle.css);
 
 @media (min-width: 840.98px) {
-    body {
+    html {
         margin-right: calc(-1 * (100vw - 100%));
         max-width: 100%
     }
